# DQA

./: COMMIT_MSG.txt  LICENSE  Makefile  PLATFORM_MIGRATION_GUIDE.md  README.md
datasentinel-ai-engine/: Dockerfile  requirements.txt
datasentinel-ai-engine/app/: consumer.py  main.py  storage.py
datasentinel-ai-engine/app/engine/: predictor.py
datasentinel-contracts/: pyproject.toml
datasentinel-contracts/datasentinel_contracts/: __init__.py
datasentinel-contracts/datasentinel_contracts/constants/: dimensions.py
datasentinel-contracts/datasentinel_contracts/events/: ai.py  base.py  correction.py  dqa.py  signing.py
datasentinel-contracts/datasentinel_contracts/schemas/: rule.py  suggestion.py  violation.py
datasentinel-contracts/tests/: test_contracts.py
datasentinel-correction-engine/: Dockerfile  requirements.txt
datasentinel-correction-engine/app/: consumer.py  main.py  storage.py
datasentinel-correction-engine/app/engine/: rules.py
datasentinel-dqa-engine/: Dockerfile  requirements.txt
datasentinel-dqa-engine/app/: consumer.py  main.py  storage.py
datasentinel-infra/: README.md
datasentinel-infra/cloudformation/00-foundation/: foundation-main.yaml  (+3 more)
datasentinel-infra/iam/: datasentinel-deploy-policy.json
datasentinel-platform-api/: .env.example  Dockerfile  requirements.txt
datasentinel-platform-api/app/: main.py
datasentinel-platform-api/migrations/: 002_tenant.sql  003_api_clients_webhooks.sql  init.sql
scripts/: aws-preflight.sh  cfn-deploy.sh  cleanup-failed-stack.sh  deploy-aws.sh  export-openapi.py  redeploy-platform-api.sh
(+32 files in other folders)
