[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "datasentinel-contracts"
version = "0.1.0"
description = "Shared event envelopes and schemas for DataSentinel platform services"
requires-python = ">=3.11"
dependencies = ["pydantic>=2.7,<3"]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["datasentinel_contracts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
